deps/v8/test/message/fail/modules-cycle3.out
*%(basename)s:7: SyntaxError: Detected cycle while resolving name 'a'
export {a as x} from "modules-skip-cycle3.js";
        ^^^^^^
SyntaxError: Detected cycle while resolving name 'a'

